Kitap ekleme ve listeleme eklendi

--- a/LibraryManagementSystem/Views/Category/GetCategory.cshtml
+++ b/LibraryManagementSystem/Views/Category/GetCategory.cshtml
@@ -9,7 +9,7 @@
 {
 	<div class="form-group" style="margin-bottom:15px">
 		<label class="font-weight-bold">ID</label>
-		@Html.TextBoxFor(c => c.Id, new {@class="form-control"})
+		@Html.TextBoxFor(c => c.CategoryId, new {@class="form-control"})
 		<br />
 		<label class="font-weight-bold">Kategori Adı</label>
 		@Html.TextBoxFor(c => c.Name, new {@class="form-control"})
