--- a/LibraryManagementSystem/Views/Category/Index.cshtml
+++ b/LibraryManagementSystem/Views/Category/Index.cshtml
@@ -20,10 +20,10 @@
     @foreach(var c in Model)
     {
         <tr>
-            <td>@c.Id</td>
+            <td>@c.CategoryId</td>
             <td>@c.Name</td>
-            <td><a href="/Category/RemoveCategory/@c.Id" class="btn btn-danger ">Sil</a></td>
-            <td><a href="/Category/GetCategory/@c.Id" class="btn btn-success">Güncelle</a></td>
+            <td><a href="/Category/RemoveCategory/@c.CategoryId" class="btn btn-danger ">Sil</a></td>
+            <td><a href="/Category/GetCategory/@c.CategoryId" class="btn btn-success">Güncelle</a></td>
         </tr>
     }
 
