--- a/LibraryManagementSystem/Views/Shared/Layout.cshtml
+++ b/LibraryManagementSystem/Views/Shared/Layout.cshtml
@@ -91,9 +91,9 @@
 
         <a href="/Category/Index/"><i class="glyphicon glyphicon-list"></i> &nbsp; Kategoriler</a>
 
-        <a href="#"><i class="glyphicon glyphicon-book"></i> &nbsp; Kitaplar</a>
+        <a href="/Book/Index"><i class="glyphicon glyphicon-book"></i> &nbsp; Kitaplar</a>
 
-        <a href="#"><i class="glyphicon glyphicon-pencil"></i> &nbsp; Yazarlar</a>
+        <a href="/Writer/Index"><i class="glyphicon glyphicon-pencil"></i> &nbsp; Yazarlar</a>
 
         <a href="#"><i class="glyphicon glyphicon-user"></i> &nbsp; Üyeler</a>
 
