--- a/LibraryManagementSystem/Views/Writer/UpdateWriter.cshtml
+++ b/LibraryManagementSystem/Views/Writer/UpdateWriter.cshtml
@@ -13,7 +13,7 @@
 		<label class="font-weight-bold">Yazar Adı</label>
 		@Html.TextBoxFor(w => w.Name, new {@class="form-control"})
 		<br />
-		<label class="font-weight-bold">Yazar Adı</label>
+		<label class="font-weight-bold">Yazar Soyadı</label>
 		@Html.TextBoxFor(w => w.Surname, new {@class="form-control"})
 		<br />
 		<label class="font-weight-bold">Yazar Detay Bilgileri</label>
