--- a/LibraryManagementSystem/Views/Shared/Layout.cshtml
+++ b/LibraryManagementSystem/Views/Shared/Layout.cshtml
@@ -95,11 +95,11 @@
 
         <a href="/Writer/Index"><i class="glyphicon glyphicon-pencil"></i> &nbsp; Yazarlar</a>
 
-        <a href="#"><i class="glyphicon glyphicon-user"></i> &nbsp; Üyeler</a>
+        <a href="/Member/Index"><i class="glyphicon glyphicon-user"></i> &nbsp; Üyeler</a>
 
-        <a href="#"><i class="glyphicon glyphicon-tower"></i> &nbsp; Personeller</a>
+        <a href="/Staff/Index"><i class="glyphicon glyphicon-tower"></i> &nbsp; Personeller</a>
 
-        <a href="#"><i class="glyphicon glyphicon-circle-arrow-right"></i> &nbsp; Ödünç Kitap Ver</a>
+        <a href="/BookTransaction/LendingBook"><i class="glyphicon glyphicon-circle-arrow-right"></i> &nbsp; Ödünç Kitap Ver</a>
 
         <a href="#"><i class="glyphicon glyphicon-circle-arrow-left"></i> &nbsp; Ödünç Kitap Al</a>
 
