Kitap ödünç verme eklendi.

--- a/LibraryManagementSystem/Views/Shared/Layout.cshtml
+++ b/LibraryManagementSystem/Views/Shared/Layout.cshtml
@@ -101,7 +101,7 @@
 
         <a href="/BookTransaction/LendingBook"><i class="glyphicon glyphicon-circle-arrow-right"></i> &nbsp; Ödünç Kitap Ver</a>
 
-        <a href="#"><i class="glyphicon glyphicon-circle-arrow-left"></i> &nbsp; Ödünç Kitap Al</a>
+        <a href="/BookTransaction/Index"><i class="glyphicon glyphicon-circle-arrow-left"></i> &nbsp; Ödünç Kitap Al</a>
 
         @*<a href="/istatistik/Index/"><i class="glyphicon glyphicon-sort"></i> &nbsp; İstatistikler</a>*@
 
