--- a/LibraryManagementSystem/Views/Auth/Login.cshtml
+++ b/LibraryManagementSystem/Views/Auth/Login.cshtml
@@ -13,7 +13,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="tr">
 
 <head>
-    <title>Material Login Form a Responsive Widget Template :: w3layouts</title>
+    <title>Kütüphane Yönetim Sistemi</title>
     <!-- meta tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,35 +35,35 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 <body>
-    <h1>Material Login Form</h1>
+    <h1>Kütüphane Yönetim Sistemi</h1>
     <div class=" w3l-login-form">
-        <h2>Login Here</h2>
-        <form action="#" method="POST">
-
+        <h2>Giriş Yap</h2>
+            @using (Html.BeginForm("Login","Auth",FormMethod.Post)){
             <div class=" w3l-form-group">
-                <label>Username:</label>
+                <label>Kullanıcı E-posta:</label>
                 <div class="group">
                     <i class="fas fa-user"></i>
-                    <input type="text" class="form-control" placeholder="Username" required="required" />
+                    <input type="text" class="form-control" name="Mail" placeholder="Kullanıcı E-posta" required="required" />
                 </div>
             </div>
             <div class=" w3l-form-group">
-                <label>Password:</label>
+                <label>Şifre:</label>
                 <div class="group">
                     <i class="fas fa-unlock"></i>
-                    <input type="password" class="form-control" placeholder="Password" required="required" />
+                    <input type="password" class="form-control" name="Password" placeholder="Şifre" required="required" />
                 </div>
             </div>
-            <div class="forgot">
+            @*<div class="forgot">
                 <a href="#">Forgot Password?</a>
                 <p><input type="checkbox">Remember Me</p>
-            </div>
+            </div>*@
             <button type="submit">Giriş Yap</button>
-        </form>
+            }
+     
         <p class=" w3l-register-p">Bir hesabın var mı?<a href="/auth/register" class="register"> Kayıt ol</a></p>
     </div>
     <footer>
-        <p class="copyright-agileinfo"> &copy; 2018 Material Login Form. All Rights Reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+        <p class="copyright-agileinfo"> © 2023 Tüm hakları saklıdır</p>
     </footer>
 
 </body>
