Hata düzeltmeleri yapıldı

--- a/LibraryManagementSystem/Views/Auth/Register.cshtml
+++ b/LibraryManagementSystem/Views/Auth/Register.cshtml
@@ -39,7 +39,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="register-left">
 				<div class="register">
 					<div class="logo">
-						<a href="#"><span class="fa fa-graduation-cap" aria-hidden="true"></span></a>
+						<span class="fa fa-graduation-cap" aria-hidden="true"></span>
 					</div>
 					<h1>Kütüphane Yönetim Sistemi</h1>
 					<p>
