--- a/LibraryManagementSystem/Views/Shared/Layout.cshtml
+++ b/LibraryManagementSystem/Views/Shared/Layout.cshtml
@@ -87,7 +87,7 @@
 
     <div class="sidebar">
 
-        <a href="/Home/Index"><i class="glyphicon glyphicon-home"></i> &nbsp; Ana Sayfa</a>
+        @*<a href="/Home/Index"><i class="glyphicon glyphicon-home"></i> &nbsp; Ana Sayfa</a>*@
 
         <a href="/Category/Index/"><i class="glyphicon glyphicon-list"></i> &nbsp; Kategoriler</a>
 
@@ -123,7 +123,7 @@
 
         @*<a href="#"><i class="glyphicon glyphicon-phone"></i> &nbsp; Yardım</a>*@
 
-        @*<a href="#"><i class="glyphicon glyphicon-remove-sign"></i> &nbsp; Çıkış</a>*@
+        <a href="/auth/LogOut"><i class="glyphicon glyphicon-remove-sign"></i> &nbsp; Çıkış</a>
 
     </div>
 
